# GadgetCore

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  report-test-coverage.sh
.github/workflows/: cmake-multi-platform.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
cmake/: GadgetCoreUtils.cmake
demos/: CMakeLists.txt  Demo1.hpp  Demo2.hpp  Demo3.hpp  DemosMain.cpp
include/: FileSystem.hpp  GadgetCore.hpp  Logger.hpp  ScreenCoordinate.hpp
include/GCore/: Assert.hpp  CoreDefines.hpp  Delegate.hpp  FileSystem.hpp  Logger.hpp  Random.hpp  ScreenCoordinate.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp  Timer.hpp  Window.hpp  WindowEventHandler.hpp
include/GCore/Data/: RingBuffer.hpp
include/GCore/Graphics/: Color.hpp  MeshData.hpp  MeshLoader.hpp  Vertex.hpp  WindowSurfaceView.hpp
include/GCore/Graphics/GPU/: GpuDevice.hpp
include/GCore/Input/: InputDefines.hpp  InputDeviceHandle.hpp
include/GCore/Math/: CoreMath.hpp  Euler.hpp  Math.hpp  Matrix.hpp  Quaternion.hpp  Rect.hpp  TMat2.hpp  TMat3.hpp  TMat4.hpp  TVec2.hpp  TVec3.hpp  TVec4.hpp  Vector.hpp
include/GCore/Parsers/: JsonParser.hpp
include/GCore/Platform/Windows/: Windows_Utils.hpp
include/GCore/Utils/: Hash.hpp
include/GadgetCore/: CoreDefines.hpp  Window.hpp
include/Math/: Math.hpp  Vector.hpp
src/: Assert.cpp  FileSystem.cpp  GadgetCore.cpp  Logger.cpp  Random.cpp  ThreadPool.cpp  Timer.cpp  Window.cpp
src/Graphics/: MeshLoader.cpp  WindowSurfaceView.cpp
src/Graphics/GPU/: GpuDevice.cpp
src/Input/: InputDeviceHandle.cpp
src/Parsers/: JsonParser.cpp
src/Platform/Windows/: Windows_Utils.cpp
tests/: .clang-tidy  CMakeLists.txt  CoreDefinesTests.cpp  GadgetCoreTests.cpp  RandomTests.cpp  ScreenCoordinateTests.cpp  TimerTests.cpp
tests/Data/: RingBufferTests.cpp
tests/Graphics/: ColorTests.cpp  MeshDataTests.cpp  VertexTests.cpp
tests/Math/: CoreMathTests.cpp  EulerTests.cpp  MathTests.cpp  QuaternionTests.cpp  RectTest.cpp  TMat2Tests.cpp  TMat3Tests.cpp  TMat4Tests.cpp  TVec2Tests.cpp  TVec3Tests.cpp  TVec4Tests.cpp  VectorTests.cpp
tests/Parsers/: JsonParserTests.cpp
tests/Utils/: HashTests.cpp
